css unorderlist css align fix

--- a/css/main.scss
+++ b/css/main.scss
@@ -74,9 +74,15 @@ a:hover{
     padding-top: 4em;
     text-align: center;
 }
-.post-meta{
-    text-align: center;
+
+ul{
+ padding-left:0;   
+ }
+ ul li{
+  list-style-position:inside  
 }
+
+  
 .post-box{
   padding-top: 2em;
 padding-bottom: 2em;
